[enh] Configuration graphQL: allow to fetch configuration without inherited properties